objects/Implementation__c.object
<CustomObject>
    <fields>
        <fullName>Actual_of_Employees__c</fullName>
        <label>Actual # of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Paycycle__c</fullName>
        <label>Additional Paycycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 5/20</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 7/22</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 15/EOM</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 1/15</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Fee_1_Type__c</fullName>
        <label>Admin Fee #1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Retainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Fee_1__c</fullName>
        <label>Admin Fee #1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_2_Type__c</fullName>
        <label>Admin Fee #2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Retainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Fee_2__c</fullName>
        <label>Admin Fee #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgricultureEmployees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agriculture Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annualized_Admin_Fees__c</fullName>
        <label>Annualized Admin Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <label>Assigned Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laulima</fullName>
                </value>
                <value>
                    <fullName>Lokahi</fullName>
                </value>
                <value>
                    <fullName>Ho'okela</fullName>
                </value>
                <value>
                    <fullName>Pono</fullName>
                </value>
                <value>
                    <fullName>Kokua</fullName>
                </value>
                <value>
                    <fullName>Ho’omau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allison Galdeira</fullName>
                </value>
                <value>
                    <fullName>Amanda Lindley</fullName>
                </value>
                <value>
                    <fullName>Dale Yasunaga</fullName>
                </value>
                <value>
                    <fullName>Dave Yarbrough</fullName>
                </value>
                <value>
                    <fullName>Debbie Dudoit</fullName>
                </value>
                <value>
                    <fullName>Esther Kim</fullName>
                </value>
                <value>
                    <fullName>Guy Tanioka</fullName>
                </value>
                <value>
                    <fullName>Heather Boudreau</fullName>
                </value>
                <value>
                    <fullName>Holly DeGeal</fullName>
                </value>
                <value>
                    <fullName>James Idemoto</fullName>
                </value>
                <value>
                    <fullName>Jared Furusho</fullName>
                </value>
                <value>
                    <fullName>Jason Daley</fullName>
                </value>
                <value>
                    <fullName>Jill Eckart</fullName>
                </value>
                <value>
                    <fullName>Jody Aadland</fullName>
                </value>
                <value>
                    <fullName>John Demarco</fullName>
                </value>
                <value>
                    <fullName>Kathy Bell</fullName>
                </value>
                <value>
                    <fullName>Maile Jackson</fullName>
                </value>
                <value>
                    <fullName>Matt Rosen</fullName>
                </value>
                <value>
                    <fullName>Sandy Sanchez</fullName>
                </value>
                <value>
                    <fullName>Stanton Saiki</fullName>
                </value>
                <value>
                    <fullName>Tawney Sablan</fullName>
                </value>
                <value>
                    <fullName>Weston Yap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesperson that closed won the prospect</description>
        <inlineHelpText>Salesperson that closed won the prospect</inlineHelpText>
        <label>BDM Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPP__c</fullName>
        <label>HC CPP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Payroll__c</fullName>
        <label>Certified Payroll</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>OCIP</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_DBA__c</fullName>
        <label>Client DBA</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <label>Client Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Referral__c</fullName>
        <label>Client Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FF</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Specific_Exceptions__c</fullName>
        <description>Client Specific Exceptions (previously tracked in CS)</description>
        <inlineHelpText>Client Specific Exceptions (previously tracked in CS)</inlineHelpText>
        <label>Client Specific Exceptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Previously labeled Client</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementation PM's</relationshipLabel>
        <relationshipName>Implementation_PM_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Detail__c</fullName>
        <label>Closed Detail</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Length of Process</fullName>
                    <label>Process</label>
                </value>
                <value>
                    <fullName>Non-responsiveness</fullName>
                    <label>Prospect Non Responsiveness</label>
                </value>
                <value>
                    <fullName>Bad Timing</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#33CC00</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Grey</fullName>
                    <color>#BBBBBB</color>
                    <label>Grey</label>
                </value>
                <value>
                    <fullName>Black</fullName>
                    <color>#333333</color>
                    <label>Black</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Original_Start_Date__c</fullName>
        <label>Contract Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Contract Start Date</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_to_Contact__c</fullName>
        <label>Contract to Contact</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom Audit changed to Priority Client. Requested by Keli'i on 4/12/18. Only changing label, not API. - 4/12/18 PIB</description>
        <inlineHelpText>Priority Client</inlineHelpText>
        <label>Priority Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Timesheet__c</fullName>
        <label>Custom Timesheet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this off means the client Did Not Materialize.</description>
        <inlineHelpText>Checking this off means the client Did Not Materialize.</inlineHelpText>
        <label>DNM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Received__c</fullName>
        <label>Date Contract Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Signed__c</fullName>
        <label>Date Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>FEDEX</fullName>
                </value>
                <value>
                    <fullName>PRIORITY</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Required__c</fullName>
        <label>Deposit Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Orientation_Date__c</fullName>
        <label>Employee Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Form_Employment_Packet_Except__c</fullName>
        <description>Employment Form/Employment Packet Exceptions (Previously tracked in ClientSpace)</description>
        <inlineHelpText>Employment Form/Employment Packet Exceptions (Previously tracked in ClientSpace)</inlineHelpText>
        <label>Employment Form/Employment Packet Except</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Transition_Date__c</fullName>
        <label>Target Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <description>Federal Employer Identification Number</description>
        <inlineHelpText>Federal Employer Identification Number</inlineHelpText>
        <label>FEIN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payroll_Date__c</fullName>
        <description>First Payroll Date</description>
        <label>First Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_Payroll_Date__c</fullName>
        <label>Fourth Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HC_Carve_Out__c</fullName>
        <label>HC Carve Out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handbook_Info__c</fullName>
        <label>Handbook Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PSH Standard</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handbook_Notes__c</fullName>
        <label>Handbook Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImpPMBDMHandoverNotes__c</fullName>
        <formula>Opportunity__r.ImpPM_BDMHandoverNotes__c</formula>
        <label>BDM Handover Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPMHandoverProspectContactNotes__c</fullName>
        <formula>Opportunity__r.mpPM_HandoverProspectContactNotes__c</formula>
        <label>Contact Handover Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPMTAFee__c</fullName>
        <description>Time &amp; Attendance Fee (Per EE Per Month)</description>
        <formula>Opportunity__r.SBQQ__PrimaryQuote__r.Time_Attendance_Fee_Per_EE_Per_Month__c</formula>
        <inlineHelpText>Time &amp; Attendance Fee (Per EE Per Month)</inlineHelpText>
        <label>Time &amp; Attendance Fee (Per EE Per Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ImpPMTAOption__c</fullName>
        <formula>TEXT(Opportunity__r.SBQQ__PrimaryQuote__r.Time_Attendance_Option__c)</formula>
        <label>TA Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPM_DepositType__c</fullName>
        <label>Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check Included</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Spread Over 1</fullName>
                </value>
                <value>
                    <fullName>2 Payroll</fullName>
                </value>
                <value>
                    <fullName>3 Payroll</fullName>
                </value>
                <value>
                    <fullName>4 Payroll</fullName>
                </value>
                <value>
                    <fullName>5 Payroll</fullName>
                </value>
                <value>
                    <fullName>6 Payroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_HandoverDTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct to Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpPM_HandoverDentalOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpPM_HandoverOutofStateEE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of State Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpPM_HandoverUnionEE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Union Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpPM_PrePaidHCDiscussed__c</fullName>
        <label>Has Pre-Paid Health Care Been Discussed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_or_N</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPM_Recent_Pay_date__c</fullName>
        <label>Recent Pay date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImpPM_SalesOpsHandoverNotes__c</fullName>
        <formula>Opportunity__r.ImpPM_SalesOpsNotes__c</formula>
        <label>SalesOps Handover Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPM_Switching_Pay_Cycle__c</fullName>
        <label>Switching Pay Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_or_N</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_TAEffectiveDate__c</fullName>
        <description>Time &amp; Attendance Effective Date</description>
        <formula>Opportunity__r.SBQQ__PrimaryQuote__r.ImpPM_TAEffectiveDate__c</formula>
        <inlineHelpText>Time &amp; Attendance Effective Date</inlineHelpText>
        <label>Time &amp; Attendance Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImpPM_TASetupFee__c</fullName>
        <description>Time &amp; Attendance Setup Fee</description>
        <formula>Opportunity__r.SBQQ__PrimaryQuote__r.ImpPM_SetupFee__c</formula>
        <inlineHelpText>Time &amp; Attendance Setup Fee</inlineHelpText>
        <label>Time &amp; Attendance Setup Fee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPM_WorkWeekSchedule__c</fullName>
        <label>Work Week Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpP_HandoverBenAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefits Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Imp_HandoverReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Handover Ready?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Coord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_PM_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Island__c</fullName>
        <label>Island</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
                <value>
                    <fullName>Lanai</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Molokai</fullName>
                </value>
                <value>
                    <fullName>Oahu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kaiser_Selection__c</fullName>
        <label>Kaiser Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>Not Offering</fullName>
                </value>
                <value>
                    <fullName>HC Carve Out</fullName>
                </value>
                <value>
                    <fullName>KP 201</fullName>
                </value>
                <value>
                    <fullName>KP 301</fullName>
                </value>
                <value>
                    <fullName>KP 201 &amp; KP 301</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Time_Weeks__c</fullName>
        <description>Length of time between when Implementation receives CSA and CSA start date</description>
        <label>Lead Time (Weeks)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_of_EE_s_at_any_given_time__c</fullName>
        <label>Max # of EE's at any given time:</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Tracking__c</fullName>
        <label>Milestone Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>HRP Setup Sent</fullName>
                </value>
                <value>
                    <fullName>CAT Setup Sent</fullName>
                </value>
                <value>
                    <fullName>Orientation Complete</fullName>
                </value>
                <value>
                    <fullName>Test Payroll</fullName>
                </value>
                <value>
                    <fullName>1st Payroll</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Transitioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <description>Net Promoter Score</description>
        <inlineHelpText>Net Promoter Score</inlineHelpText>
        <label>NPS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Zero_WSE_Gain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net Zero WSE Gain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Action_Owner__c</fullName>
        <label>Next Action Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <label>Number of Stories</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OB__c</fullName>
        <label>OB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ongoing_Payroll_Date__c</fullName>
        <label>Ongoing Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to imp PM</description>
        <inlineHelpText>Opportunity related to imp PM</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Implementation PM</relationshipLabel>
        <relationshipName>Implementation_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oreo_NHP__c</fullName>
        <label>Oreo NHP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PEO_HRO__c</fullName>
        <label>PEO/HRO?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PEO</fullName>
                </value>
                <value>
                    <fullName>HRO-HRP</fullName>
                </value>
                <value>
                    <fullName>HRP-Ultipro</fullName>
                </value>
                <value>
                    <fullName>HRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <label>POS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC__c</fullName>
        <label>PSC</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paycycle__c</fullName>
        <label>Paycycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 5/20</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 7/22</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 15/EOM</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 1/15</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HRP</fullName>
                    <label>HRP-HK</label>
                </value>
                <value>
                    <fullName>ULTI</fullName>
                    <label>UltiPro</label>
                </value>
                <value>
                    <fullName>HRP-Prism</fullName>
                </value>
                <value>
                    <fullName>HRP-Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Payroll_Provider__c</fullName>
        <label>Previous Payroll Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_to__c</fullName>
        <label>Print To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Oahu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_CXI__c</fullName>
        <description>Your predictive score if the client was surveyed today</description>
        <inlineHelpText>Your predictive score if the client was surveyed today</inlineHelpText>
        <label>Projected CXI Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Push_Reason__c</fullName>
        <label>Push Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementation PM's (Referring Client)</relationshipLabel>
        <relationshipName>Implementation_PM_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rush_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rush Start?</description>
        <label>Rush Start?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_HRC_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety/HRC Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Payroll_Date__c</fullName>
        <label>Second Payroll Date</label>
        <type>Date</type>
    </fields>
</CustomObject>